2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (relocate_symbols): Remove unneeded brackets.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (main_context), (secondary_context):
	Define after defining type and not before.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfscrypt.c (grub_ccm_decrypt): Return right error
	type.
	(grub_gcm_decrypt): Likewise.
	(algo_decrypt): Likewise.
	(grub_zfs_decrypt_real): Transform error type.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/geli.c (geli_rekey): Fix error return type.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/usbms.c (grub_usbms_cbi_cmd): Fix error type.
	(grub_usbms_cbi_reset): Likewise.
	(grub_usbms_bo_reset): Likewise.
	(grub_usbms_reset): Likewise.
	(grub_usbms_attach): Likewise.
	(grub_usbms_transfer_cbi): Likewise.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/lzopio.c (test_header): Simplify code and remove useless
	"checksum = checksum;".

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_iterate_dir): Fix type of
	entry_type.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (grub_cmd_legacy_kernel): Fix
	BIOS disk check.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ehci.c (grub_ehci_restore_hw): Return right enum
	type.
	(grub_ehci_fini_hw): Likewise.
	* grub-core/bus/usb/usbhub.c (grub_usb_add_hub): Likewise.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/usb.h (grub_usb_controller_dev): Make portstatus
	return grub_usb_err_t for cosistency. All users updated.

2013-11-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/mkimage.c (SzAlloc): Use attribute unused rather than dubious
	assigning to itself.

2013-11-05  Gustavo Luiz Duarte  <gustavold@linux.vnet.ibm.com>